force-app/main/default/objects/Transport_Request__c/Transport_Request__c.object-meta.xml
<CustomObject>
    <description>request for transport of the vehicle</description>
    <label>Transport Request</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Transport Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>