force-app/main/default/objects/Transport_Request__c/fields/Account_Number_OLD__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_OLD__c</fullName>
    <formula>Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number OLD</label>
    <type>Text</type>
</CustomField>