force-app/main/default/objects/Transport_Request__c/fields/Arrived_at_DAL_on__c.field-meta.xml
<CustomField>
    <fullName>Arrived_at_DAL_on__c</fullName>
    <label>Arrived at DAL on</label>
    <type>Date</type>
</CustomField>