force-app/main/default/objects/Transport_Request__c/fields/Booking_Received__c.field-meta.xml
<CustomField>
    <fullName>Booking_Received__c</fullName>
    <label>Booking Received</label>
    <type>Date</type>
</CustomField>