force-app/main/default/objects/Transport_Request__c/fields/DAL_Return_Car__c.field-meta.xml
<CustomField>
    <fullName>DAL_Return_Car__c</fullName>
    <label>DAL Return Car</label>
    <length>255</length>
    <type>Text</type>
</CustomField>