force-app/main/default/objects/Transport_Request__c/fields/Day_to_Day__c.field-meta.xml
<CustomField>
    <fullName>Day_to_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day-to-Day</label>
    <type>Checkbox</type>
</CustomField>