force-app/main/default/objects/Transport_Request__c/fields/Day_to_day_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_to_day_Account_Number__c</fullName>
    <label>Day-to-day Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>