force-app/main/default/objects/Transport_Request__c/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <label>Delivered On</label>
    <type>Date</type>
</CustomField>