force-app/main/default/objects/Transport_Request__c/fields/Delivery_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Code__c</fullName>
    <formula>IF(ISBLANK(To_Location__r.Id),  To_Location_Regular_Transport__r.AccountId, To_Location__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Location Code</label>
    <type>Text</type>
</CustomField>