force-app/main/default/objects/Transport_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>