force-app/main/default/objects/Transport_Request__c/fields/Department_old__c.field-meta.xml
<CustomField>
    <fullName>Department_old__c</fullName>
    <formula>Vehicle__r.department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (OLD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>