force-app/main/default/objects/Transport_Request__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Location</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transport Requests</relationshipLabel>
    <relationshipName>Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>