force-app/main/default/objects/Transport_Request__c/fields/From_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Location_Address__c</fullName>
    <formula>From_Location__r.Mailing_Address_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Location Address</label>
    <type>Text</type>
</CustomField>