force-app/main/default/objects/Transport_Request__c/fields/License_plate__c.field-meta.xml
<CustomField>
    <fullName>License_plate__c</fullName>
    <formula>Vehicle__r.License_plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License plate</label>
    <type>Text</type>
</CustomField>