force-app/main/default/objects/Transport_Request__c/fields/Pickup_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location_Code__c</fullName>
    <formula>From_Location__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Location Code</label>
    <type>Text</type>
</CustomField>