force-app/main/default/objects/Transport_Request__c/fields/Planned_On__c.field-meta.xml
<CustomField>
    <fullName>Planned_On__c</fullName>
    <label>Planned On</label>
    <type>Date</type>
</CustomField>