force-app/main/default/objects/Transport_Request__c/fields/Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Reference_Code__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Reference Code</label>
    <type>AutoNumber</type>
</CustomField>