force-app/main/default/objects/Transport_Request__c/fields/Registration_Number_BMW__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number_BMW__c</fullName>
    <formula>Vehicle__r.Registration_Number_BMW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number (BMW)</label>
    <type>Text</type>
</CustomField>