force-app/main/default/objects/Transport_Request__c/fields/SPIL_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPIL_Comments__c</fullName>
    <label>SPIL + Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>