force-app/main/default/objects/Transport_Request__c/fields/To_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transport Requests</relationshipLabel>
    <relationshipName>Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>