force-app/main/default/objects/Transport_Request__c/fields/To_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Location_Address__c</fullName>
    <formula>IF(ISBLANK(To_Location_Regular_Transport__c),IF( To_Location__r.RecordType.Name = &quot;Buyer&quot;,  Vehicle__r.Buyer_delivery_address__c , To_Location__r.Billing_Address_Formula__c ),   To_Location_Regular_Transport__r.Mailing_Address_Formula__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Location Address</label>
    <type>Text</type>
</CustomField>