force-app/main/default/objects/Transport_Request__c/fields/To_Location_OLD__c.field-meta.xml
<CustomField>
    <fullName>To_Location_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location OLD</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transport Requests (To Location)</relationshipLabel>
    <relationshipName>Transport_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>