force-app/main/default/objects/Transport_Request__c/fields/To_Location_Regular_Transport__c.field-meta.xml
<CustomField>
    <fullName>To_Location_Regular_Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only used for transport that are not Infleet or Defleet</inlineHelpText>
    <label>To Location Regular Transport</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transport Requests (To Location Regular Transport)</relationshipLabel>
    <relationshipName>Transport_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>