force-app/main/default/objects/Transport_Request__c/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <formula>IF(NOT(ISBLANK(Tracking_Number__c)),&quot;https://tracking.autologik.dk/?trackingnummer=&quot;+ Tracking_Number__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>