force-app/main/default/objects/Transport_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>From_Location__c</columns>
    <columns>To_Location__c</columns>
    <columns>To_Location_Regular_Transport__c</columns>
    <columns>Status__c</columns>
    <columns>Day_to_Day__c</columns>
    <columns>Planned_On__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>SPIL_Comments__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Day_to_day_Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>