force-app/main/default/objects/Transport_Request__c/listViews/Not_Ready.listView-meta.xml
<ListView>
    <fullName>Not_Ready</fullName>
    <columns>NAME</columns>
    <columns>From_Location__c</columns>
    <columns>To_Location__c</columns>
    <columns>To_Location_Regular_Transport__c</columns>
    <columns>Day_to_Day__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Ready</value>
    </filters>
    <label>Not Ready</label>
</ListView>